# incubator-brpc

./: BUILD  CMakeLists.txt  WORKSPACE
bazel/: ucx.BUILD  workspace.bzl
docs/cn/: ucx.md
example/: BUILD
example/multi_threaded_echo_c++/: CMakeLists.txt  client.cpp  client_multi_server.cpp  server.cpp
example/multi_threaded_echo_c++_dpdk/: CMakeLists.txt  client.cpp  server.cpp
example/multi_threaded_echo_c++_spdk/: CMakeLists.txt  CMakeLists.txt.dpdk  client.cpp  server.cpp
example/multi_threaded_echo_c++_spdk_pfs/: CMakeLists.txt  server.cpp
src/brpc/: RefCountedObj.cpp  RefCountedObj.h  channel.cpp  channel.h  controller.cpp  eventcallback.h  input_messenger.cpp  protocol.cpp  protocol.h  server.cpp  server.h  socket.cpp  socket.h  ucp_acceptor.cpp  ucp_acceptor.h  ucp_cm.cpp  ucp_cm.h  ucp_connection.cpp  ucp_connection.h  ucp_ctx.cpp  ucp_ctx.h  ucp_worker.cpp  ucp_worker.h  ucp_worker_pool.cpp  ucp_worker_pool.h
src/brpc/builtin/: prometheus_metrics_service.cpp
src/brpc/details/: naming_service_thread.cpp  usercode_backup_pool.cpp
src/brpc/policy/: baidu_rpc_protocol.cpp  baidu_rpc_protocol.h  domain_naming_service.cpp  esp_protocol.cpp  esp_protocol.h  http2_rpc_protocol.cpp  http2_rpc_protocol.h  http_rpc_protocol.cpp  http_rpc_protocol.h  hulu_pbrpc_protocol.cpp  hulu_pbrpc_protocol.h  memcache_binary_protocol.cpp  memcache_binary_protocol.h  nova_pbrpc_protocol.cpp  nova_pbrpc_protocol.h  nshead_mcpack_protocol.cpp  nshead_mcpack_protocol.h  nshead_protocol.cpp  nshead_protocol.h  public_pbrpc_protocol.cpp  public_pbrpc_protocol.h  redis_protocol.cpp  redis_protocol.h  rtmp_protocol.cpp  rtmp_protocol.h  sofa_pbrpc_protocol.cpp  sofa_pbrpc_protocol.h  ubrpc2pb_protocol.cpp  ubrpc2pb_protocol.h
src/bthread/: bthread.h  fd.cpp  mutex.cpp  rwlock.cpp  rwlock_v2.cpp  rwlock_v2.h  task_control.cpp  timer_thread.cpp  types.h
src/butil/: _pctrie.h  atomic_128.h  atomic_128_aarch64.h  atomic_128_amd64.h  autovector.h  build_config.h  comlog_sink.h  endpoint.cpp  endpoint.h  iobuf.cpp  iobuf.h  iobuf_inl.h  lfstack.cpp  lfstack.h  logging.cc  logging.h  object_pool_inl.h  pctrie.cc  pctrie.h  refcountedobj.cpp  refcountedobj.h  resource_pool_inl.h  thread_local.h
src/butil/time/: time.h
src/butil/uma/: mtx.c  rwlock.c  smp.c  sx.c  systm.c  task.c  time.c  uma_core.c
src/butil/uma/uma/: atomic.h  bitset.h  cdefs.h  cpufunc.h  malloc.h  mtx.h  param.h  pcpu.h  queue.h  rwlock.h  smp.h  sx.h  systm.h  task.h  time.h  types.h  uma.h  uma_int.h
src/bvar/: latency_recorder.cpp  scoped_timer.h
src/bvar/detail/: sampler.cpp  series.h
test/: BUILD  CMakeLists.txt  brpc_channel_unittest.cpp  brpc_prometheus_metrics_unittest.cpp  brpc_server_unittest.cpp  brpc_socket_unittest.cpp  bthread_brpc_rwlockv2_unittest.cpp  bvar_recorder_unittest.cpp  bvar_reducer_unittest.cpp  bvar_sampler_unittest.cpp  endpoint_unittest.cpp  iobuf_unittest.cpp  logging_unittest.cc
